# meter

./: .dockerignore  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.base.json
.cargo/: audit.toml
.claude/skills/meter-design-system/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  react-doctor.yml  release.yml  stainless.yml
apps/control-plane/: README.md  openapi.json  package.json  tsconfig.json
apps/control-plane/drizzle/: 0000_eager_reaper.sql  0001_damp_mister_sinister.sql  0002_known_sunset_bain.sql  0003_loud_lester.sql  0004_nappy_longshot.sql  0005_last_shadowcat.sql  0006_tenant_scope.sql  0007_rls.sql
apps/control-plane/scripts/: emit-openapi.ts
apps/control-plane/src/: main.ts
apps/control-plane/test/: agents.test.ts  alert-evaluation.test.ts  auth.test.ts  http.test.ts  notifications.test.ts  observability.test.ts  openapi.test.ts  products.test.ts  rls.test.ts  support.ts  tenant-isolation.test.ts  webhooks.test.ts
apps/dashboard/: .prettierignore  README.md  components.json  eslint.config.mjs  next.config.ts  package.json
apps/dashboard/app/: globals.css  layout.tsx  transitions.css
apps/dashboard/components/: account-search-form.tsx  app-sidebar.tsx  copy-button.tsx  empty-state.tsx  org-switcher.tsx  page-header.tsx  section-skeleton.tsx  value-badge.tsx
apps/dashboard/hooks/: use-mobile.ts
apps/dashboard/lib/: onboarding.ts
apps/docs/: README.md  mdx-components.tsx  next.config.mjs  package.json  tsconfig.json
apps/docs/app/: globals.css  layout.tsx  page.mdx
apps/docs/components/: api-reference.tsx  logo.tsx  search.tsx  sidebar.tsx
apps/docs/lib/: control-plane-openapi.json  control-plane-spec.ts  engine-openapi.json  engine-spec.ts  openapi.ts
apps/docs/scripts/: sync-openapi.mjs
crates/meter-api/: .rust-doctor-cache.json  Cargo.toml  README.md  openapi.json
crates/meter-api/src/: cards.rs  dto.rs  error.rs  lib.rs  metrics.rs
crates/meter-api/src/grpc/: config.rs  ingest.rs  ledger.rs  mod.rs  query.rs
crates/meter-api/src/routes/: accounts.rs  analytics.rs  audit.rs  budgets.rs  catalog.rs  events.rs  health.rs  invoices.rs  leases.rs  metrics.rs  mod.rs  openapi.rs  rate_cards.rs  request_id.rs  reservations.rs  simulate.rs  usage.rs
crates/meter-api/tests/: grpc.rs  grpc_config.rs  grpc_ingest.rs  grpc_query.rs  grpc_serve.rs  http.rs  openapi_spec.rs
crates/meter-cli/: .rust-doctor-cache.json  Cargo.toml  README.md
crates/meter-cli/src/: main.rs
crates/meter-cli/tests/: price.rs  reconcile.rs  seed.rs  sweep.rs
crates/meter-core/: .rust-doctor-cache.json  Cargo.toml  README.md
crates/meter-core/src/: credit.rs  id.rs  lib.rs  money.rs
crates/meter-enforcement/: .rust-doctor-cache.json  Cargo.toml  README.md
crates/meter-enforcement/src/: error.rs  lib.rs  policy.rs  service.rs
crates/meter-engine/: .rust-doctor-cache.json  Cargo.toml  README.md
crates/meter-engine/src/: main.rs
crates/meter-event/: .rust-doctor-cache.json  Cargo.toml  README.md
crates/meter-event/src/: conformance.rs  error.rs  event.rs  lib.rs  memory.rs  request.rs  store.rs
crates/meter-ledger/: .rust-doctor-cache.json  Cargo.toml  README.md
crates/meter-ledger/src/: backend.rs  conformance.rs  error.rs  lib.rs  request.rs
crates/meter-ledger/src/memory/: mod.rs  ops.rs  state.rs  tests.rs
crates/meter-ledger/src/model/: account.rs  balance.rs  entry.rs  mod.rs  reservation.rs
crates/meter-pricing/: .rust-doctor-cache.json  Cargo.toml  README.md
crates/meter-pricing/benches/: pricing.rs
crates/meter-pricing/examples/: throughput.rs
crates/meter-pricing/src/: card.rs  component.rs  dimension.rs  error.rs  lib.rs  price.rs  simulate.rs  usage.rs
crates/meter-pricing/tests/: properties.rs
crates/meter-proto/: Cargo.toml  README.md  build.rs
crates/meter-proto/src/: lib.rs
crates/meter-ratecards/: .rust-doctor-cache.json  Cargo.toml  README.md
crates/meter-ratecards/src/: lib.rs
crates/meter-store-ch/: .rust-doctor-cache.json  Cargo.toml  README.md
crates/meter-store-ch/src/: event_store.rs  lib.rs  schema.rs
crates/meter-store-ch/tests/: credentials.rs  event_conformance.rs  integration.rs  throughput.rs
crates/meter-store-pg/: .rust-doctor-cache.json  Cargo.toml  README.md
crates/meter-store-pg/benches/: ledger_pg.rs
crates/meter-store-pg/examples/: throughput.rs
crates/meter-store-pg/migrations/: 0001_ledger.sql  0002_config.sql  0002_events.sql  0003_audit.sql  0003_hold_expiry.sql  0004_hold_run.sql  0005_entry_run.sql
crates/meter-store-pg/src/: audit.rs  config.rs  event.rs  lib.rs  mapping.rs  ops.rs  report.rs
crates/meter-store-pg/tests/: config.rs  conformance.rs  events.rs  migrate.rs
deploy/: Dockerfile  control-plane.Dockerfile  dashboard.Dockerfile  docker-compose.yml  docs.Dockerfile  docs.nginx.conf
deploy/dev/: README.md  docker-compose.yml
deploy/e2e/: README.md  flow.py  smoke.sh
deploy/helm/meter/: Chart.yaml  README.md  values.yaml
docs/: ARCHITECTURE.md  BENCHMARKS.md  DECISIONS.md  README.md  SDKS.md  SLO.md  VISION.md
docs/adr/: 0001-engine-controlplane-split.md  0002-editable-events-and-run-voiding.md  0003-events-in-clickhouse.md  0004-audit-log-in-clickhouse.md  0005-provider-scale-throughput.md  0006-wire-protocol-versioning.md  0007-tenant-isolation.md  0008-control-plane-engine-transport.md  0009-amend-delta-posting.md  README.md
proto/: README.md
proto/meter/v1/: common.proto  config.proto  ingest.proto  ledger.proto  query.proto
sdks/python/: README.md  pyproject.toml
sdks/python/meter/: __init__.py  adapters.py  client.py  errors.py  patch.py  run.py
sdks/python/tests/: test_e2e.py  test_meter.py  test_patch.py
sdks/stainless/: openapi.stainless.yml
sdks/typescript/: README.md  package.json  tsconfig.json
sdks/typescript/src/: client.ts  errors.ts  (+3 more)
tickets/: README.md
(+142 files in other folders)
