[package]
name = "meter-cli"
description = "meterctl: admin CLI for the meter engine (migrations, ops)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[[bin]]
name = "meterctl"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
meter-core = { workspace = true }
meter-ledger = { workspace = true }
meter-pricing = { workspace = true }
meter-ratecards = { workspace = true }
meter-store-pg = { workspace = true }
meter-store-ch = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
time = { workspace = true }

[dev-dependencies]
testcontainers-modules = { version = "0.12", features = ["postgres", "clickhouse"] }
meter-event = { workspace = true }
serde_json = { workspace = true }
