[package]
name = "meter-ledger"
description = "Double-entry credit ledger: the LedgerBackend trait, its domain model, and an in-memory reference implementation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
# Exposes the reusable conformance suite (crate::conformance) for other backends to test against.
conformance = []

[dependencies]
meter-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
proptest = { workspace = true }
rust_decimal = { workspace = true }
