[package]
name = "meter-pricing"
description = "Rate cards, pricing dimensions, and token-to-credit translation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
meter-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
criterion = "0.5"

[[bench]]
name = "pricing"
harness = false
