[package]
name = "meter-proto"
description = "Generated gRPC types + service stubs for the engine contract (from proto/)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
prost = "0.13"
tonic = "0.12"

[build-dependencies]
tonic-build = "0.12"
