[package]
name = "meter-ratecards"
description = "Curated, versioned catalog of model-provider rate cards (batteries-included pricing)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
meter-core = { workspace = true }
meter-pricing = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
