[package]
name = "meter-store-ch"
description = "ClickHouse store: the event firehose (system of record for events) + usage analytics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
clickhouse = { version = "0.13", features = ["uuid", "time"] }
meter-core = { workspace = true }
meter-event = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
meter-event = { workspace = true, features = ["conformance"] }
testcontainers-modules = { version = "0.12", features = ["clickhouse"] }
