[package]
name = "meter-store-pg"
description = "PostgreSQL implementation of the meter ledger backend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
meter-core = { workspace = true }
meter-ledger = { workspace = true }
meter-event = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
meter-ledger = { workspace = true, features = ["conformance"] }
meter-event = { workspace = true, features = ["conformance"] }
testcontainers-modules = { version = "0.12", features = ["postgres"] }
