[project]
name = "meter-sdk"
version = "0.0.0"
description = "Python SDK for the meter engine: usage events and reserve/settle run governance"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "AGPL-3.0-only" }
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["meter"]
